@@ -369,10 +369,15 @@ jpeg_get_density (struct JPEG_info *j_info, double *xdensity, double *ydensity)
   }
 
 /*
- * j_info->xdpi and j_info->ydpi are already determined
- * because jpeg_get_density() is always called after
- * JPEG_scan_file().
+ * j_info->xdpi and j_info->ydpi are determined in most cases
+ * in JPEG_scan_file(). FIXME: However, in some kinds of JPEG files,
+ * j_info->xdpi, and j_info->ydpi are not determined in
+ * JPEG_scan_file(). In this case we assume
+ * that j_info->xdpi = j_info->ydpi = 72.0.
  */
+  if (j_info->xdpi < 0.1 && j_info->ydpi < 0.1) {
+    j_info->xdpi = j_info->ydpi = 72.0;
+  }
   *xdensity = 72.0 / j_info->xdpi;
   *ydensity = 72.0 / j_info->ydpi;
 
