@@ -1,3 +1,8 @@
+2017-12-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* jpegimage.c: If j_info->xdpi and j_info->ydpi are not
+	determined in JPEG_scan_file(), they are assumed to be 72.0.
+
 2017-12-09  Jiang Jiang  <gzjjgod@gmail.com>
 
 	* tt_cmap.c (is_PUA_or_presentation, add_to_cmap_if_used):
